Fix menu background cutting off for some people

--- a/code/Resource/Styles/hud.scss
+++ b/code/Resource/Styles/hud.scss
@@ -11,7 +11,6 @@ $orange: #f70a;
 
 HudRootPanel
 {
-    background-color: rgba( #333, 0 );
     transition: background-color 0.2s ease-in;
     transform-origin: 50% 50%;
 
@@ -22,7 +21,7 @@ HudRootPanel
 }
 
 vitals
-{
+{   
     font-size: 64px;
     color: #ff0;
     mix-blend-mode: lighten;
@@ -262,18 +261,5 @@ armourhud
     &.empty
     {
         opacity: 0.1;
-    }
-}
-
-.game-end
-{
-    chatbox, .top-middle
-    {
-        z-index: 1000;
-    }
-
-    inventorybar, .bottom-right, .bottom-left
-    {
-        display: none;
     }
 }
