--- a/code/ui/MainMenu/GameMenu/DefaultGameMenu.razor.scss
+++ b/code/ui/MainMenu/GameMenu/DefaultGameMenu.razor.scss
@@ -1,7 +1,7 @@
 
 .gamemainmenu {
 	background-image: url('ui/MainMenu/background_placeholder.jpg');
-	background-size: contain;
+	background-size: cover;
 	background-repeat: no-repeat;
 	padding: 0 170px;
 	opacity: 1;
